--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.9'
 services:
   forntend:
     build: .
@@ -6,3 +5,11 @@ services:
       - "${PORT}:${PORT}"
     env_file:
       - .env
+  nginx-exporter:
+    image: nginx/nginx-prometheus-exporter:latest
+    command:
+      - --nginx.scrape-uri=http://nginx:8080/stub_status
+    ports:
+      - "9113:9113"
+    depends_on:
+      - forntend
