--- a/nginx.conf
+++ b/nginx.conf
@@ -6,4 +6,9 @@ server {
     include /etc/nginx/mime.types;
     try_files $uri $uri/ /index.html;
   }
+
+  location /stub_status {
+    stub_status on;
+    access_log off;
+  }
 }
